--- a/mainPage/main.html
+++ b/mainPage/main.html
@@ -33,6 +33,7 @@
   <script src="../objects/blackCardsArray.js"></script>
   <script src="../objects/whiteCardsArray.js"></script>
   <script src="../objects/status.js"></script>
+  <script src="../domElementsManagement.js"></script>
   <script src="../api.js"></script>
   <script src="main.js"></script>
 </body>
